--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
+            background-color: #d4edda; /* Зелений фон */
             margin: 0;
             padding: 20px;
         }
@@ -16,6 +16,7 @@
             text-align: center; /* Центрируем заголовок */
             font-size: 36px; /* Увеличиваем размер заголовка */
             margin-bottom: 20px; /* Отступ снизу для заголовка */
+            color: #155724; /* Темно-зелений колір заголовка */
         }
         .bio {
             background-color: #ffffff; /* Цвет фона для блока с биографией */
@@ -34,7 +35,7 @@
             display: block; /* Кнопка возвращения на предыдущую страницу */
             margin: 20px auto 0; /* Отступы */
             padding: 10px 20px; /* Отступы внутри кнопки */
-            background-color: #007bff; /* Цвет кнопки */
+            background-color: #28a745; /* Яскравий зелений для кнопки */
             color: white; /* Цвет текста */
             border: none; /* Убираем рамку */
             border-radius: 5px; /* Скругление углов */
@@ -44,13 +45,13 @@
             transition: background-color 0.3s; /* Переход при наведении */
         }
         .back-button:hover {
-            background-color: #0056b3; /* Цвет кнопки при наведении */
+            background-color: #218838; /* Темно-зелений при наведении */
         }
     </style>
 </head>
 <body>
 
-    <h1>Про нашу компанію</h1>
+    <h1>Про наш Сервіс</h1>
 
     <div class="bio">
         <p>Ласкаво просимо до "Магазину Телефонів"! Ми спеціалізуємося на продажу найновіших смартфонів і аксесуарів, які задовольнять потреби кожного користувача.</p>
