--- a/products.html
+++ b/products.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+        <!DOCTYPE html>
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
@@ -25,38 +25,38 @@
 
         <section class="products-section">
             <div class="product-card" onmouseover="this.classList.add('hover-effect')" onmouseout="this.classList.remove('hover-effect')">
-                <img src="iphone.png" alt="iPhone 13" class="product-image">
                 <h3>iPhone 13</h3>
+                <img src="iphone.png" alt="iPhone 13" class="product-image">
                 <p class="price">$999</p>
                 <button class="order-button" onclick="navigateTo('order')">Замовити</button>
             </div>
             <div class="product-card" onmouseover="this.classList.add('hover-effect')" onmouseout="this.classList.remove('hover-effect')">
-                <img src="samsung.jpg" alt="Samsung Galaxy S21" class="product-image">
                 <h3>Samsung Galaxy S21</h3>
+                <img src="samsung.webp" alt="Samsung Galaxy S21" class="product-image">
                 <p class="price">$799</p>
                 <button class="order-button" onclick="navigateTo('order')">Замовити</button>
             </div>
             <div class="product-card" onmouseover="this.classList.add('hover-effect')" onmouseout="this.classList.remove('hover-effect')">
-                <img src="pixel.jpg" alt="Google Pixel 6" class="product-image">
                 <h3>Google Pixel 6</h3>
+                <img src="pixel.jpg" alt="Google Pixel 6" class="product-image">
                 <p class="price">$599</p>
                 <button class="order-button" onclick="navigateTo('order')">Замовити</button>
             </div>
             <div class="product-card" onmouseover="this.classList.add('hover-effect')" onmouseout="this.classList.remove('hover-effect')">
-                <img src="oneplus.jpg" alt="OnePlus 9" class="product-image">
-                <h3>OnePlus 9</h3>
+                <h3>Vivo x100 ultra</h3>
+                <img src="vivo.jpg" alt="Vivo x100 ultra" class="product-image">
                 <p class="price">$729</p>
                 <button class="order-button" onclick="navigateTo('order')">Замовити</button>
             </div>
             <div class="product-card" onmouseover="this.classList.add('hover-effect')" onmouseout="this.classList.remove('hover-effect')">
-                <img src="xiaomi.jpg" alt="Xiaomi Mi 11" class="product-image">
-                <h3>Xiaomi Mi 11</h3>
+                <h3>Samsung S24</h3>
+                <img src="samsung24.jpg" alt="Samsung S24 ultra" class="product-image">
                 <p class="price">$749</p>
                 <button class="order-button" onclick="navigateTo('order')">Замовити</button>
             </div>
             <div class="product-card" onmouseover="this.classList.add('hover-effect')" onmouseout="this.classList.remove('hover-effect')">
-                <img src="nokia.jpg" alt="Nokia 8.3" class="product-image">
-                <h3>Nokia 8.3</h3>
+                <h3>Iphone 16</h3>
+                <img src="iphone16.jpg" alt="Iphone 16" class="product-image">
                 <p class="price">$499</p>
                 <button class="order-button" onclick="navigateTo('order')">Замовити</button>
             </div>
